# ecs-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  logo.txt  meson.build  task.todo
.cache/clangd/index/: core.c.3D8F33A1C24825E7.idx  core.h.34DB83870DCED6B6.idx  core_test.cpp.A4202D3DBF9CF5AE.idx  doctest.h.3E066E6614A1D2CD.idx  main.c.4D77A7B3B4195F1F.idx  utils.h.D0335FF03246D133.idx
.github/workflow/: main.yml
.github/workflows/: main.yml  release.yml
Core/: CMakeLists.txt
Core/include/: application.h  log.h
Core/src/: CMakeLists.txt  application.cpp  loader.cpp  log.cpp  main.cpp
Render/: CMakeLists.txt
Render/include/: vk_render.h
Render/src/: vk_render.cpp
Window/: CMakeLists.txt
Window/src/: glfw_window.cpp
cmake/: Config.cmake.in
core/: CMakeLists.txt  config.h.in  core.c  core.h  utils.h
editor/: CMakeLists.txt  main.c
include/: core.h  meson.build  utils.h
include/core/: common.h  log.h  utils.h
include/core/graphics/: render.h  window.h
include/core/io/: loader.h
include/glfw_window/: glfw_window.h
include/modules/: module.h  render.h
include/utils/: log.h
include/vk_render/: vk_render.h
source/app/: CMakeLists.txt  application.cpp  application.h  main.cpp
source/core/: CMakeLists.txt  loader.cpp  log.cpp
source/core/utils/: log.cpp
source/editor/: CMakeLists.txt  main.cpp
source/glfw_window/: CMakeLists.txt  glfw_window.cpp
source/modules/: CMakeLists.txt
source/modules/module/: CMakeLists.txt  module.cpp
source/render/: CMakeLists.txt  render.cpp
source/vk_render/: CMakeLists.txt  vk_render.cpp
src/: CMakeLists.txt  core.c  main.c  meson.build
src/core/: CMakeLists.txt  core.c
tests/: CMakeLists.txt  core_test.cpp  main_test.cpp  meson.build
